	* device/lib/libsdcc.lib,
	* device/lib/Makefile.in,
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added _heap.c
	* doc/sdccman.lyx: documented use of new _heap.c
	* support/regression/tests/malloc.c: removed init_dynamic_memory
	* src/cdbFile.c(spacesToUnderscores): new function,
	  (cdbWriteEndFunction, cdbWriteCLine): use spacesToUnderscores, fixes bug
	  1068030

2006-12-09 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/sdcc.h: prevent multiple inclusion
	* support/cpp2/options.h: deleted

2006-12-08 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/sdcc.h: removed x*alloc() macros
	* support/cpp2/libiberty.h: uncommented out x*alloc() declarations
	* support/cpp2/Makefile.bcc, support/cpp2/Makefile.in,
	  support/cpp2/sdcpp.sdc: x*alloc files added to the project
	* support/cpp2/system.h: moved #include "sdcc.h"
	* support/cpp2/libiberty/xexit.c, support/cpp2/libiberty/xmalloc.c,
	  support/cpp2/libiberty/xstrdup.c, support/cpp2/libiberty/xstrerror.c:
	  added
	* support/cpp2/sdcppinit.c: added -isysroot, -fsigned-char,
	  -funsigned-char options
	* support/cpp2/sdcppmain.c: fixed bug 1611411

2006-12-07 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cpplib.c: reverted sdcpp special handling of _Pragma()
	  directive

2006-12-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (addDecl): fixed bug 1609244
	* src/SDCCmain.c (linkEdit): fixed bug 1609279
	* doc/sdccman.lyx,
	* .version: bumped to 2.6.2 because a) it's been a while
	  b) the linker sources have moved c) the preprocessor is upgraded

2006-12-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/snprintf.c: some checks
	* lib/src/printf_large.c: %bc: read char instead of int from stack

2006-12-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/cc2430.h: inserted _XPAGE

2006-12-02 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2430.h: added
